syntax = "proto3";
package kratos.api;

option go_package = "moderation/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Moderation moderation = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    message Pool {
      int32 max_open_conns = 1;
      int32 min_idle_conns = 2;
      int64 max_conn_lifetime = 3; // in minutes
      int64 max_conn_idle_time = 4; // in minutes
    }
    Pool pool = 3;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message Moderation {
  message Ollama {
    bool enabled = 1;
    string base_url = 2;         // e.g., "http://localhost:11434"
    string model = 3;            // e.g., "llama-guard3:1b", "qwen2.5:7b-instruct"
    google.protobuf.Duration timeout = 4;
  }
  
  message PHash {
    bool enabled = 1;
    int32 similarity_threshold = 2; // Hamming distance threshold (default 5)
  }
  
  message TextModeration {
    int32 reject_threshold = 1;  // Severity threshold to auto-reject
    int32 review_threshold = 2;  // Severity threshold for manual review
  }
  
  Ollama ollama = 1;
  PHash phash = 2;
  TextModeration text = 3;
}

